Removing date, createdAt, and updatedAt from meal creation, and changing it so that total nutritional information is summarized in the meal record, also updating the README.md
